kubernetes/NetworkPolicy/limit-access-based-on-label.yml
## Let’s say you want to limit access to the nginx service so that only pods with the label access: true can query it.

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      run: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
