kubernetes/NetworkPolicy/sd-trade-wordpress.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test
  namespace: default
spec:
  podSelector:
    matchLabels:
      network: restricted
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    ### Connection to mysql
    - podSelector:
        matchLabels:
          access: allow
    ### Connection to ingress controller
    - namespaceSelector:
        matchLabels:
          role: ingress
    ### Connection to cluster dns service
    - namespaceSelector:
        matchLabels:
          role: system
  egress:
  - to:
    ### Connection to mysql
    - podSelector:
        matchLabels:
          access: allow
    ### Connection to cluster dns
    - namespaceSelector:
        matchLabels:
          role: system
    ### Investing.com
    - ipBlock:
        cidr: 185.94.84.100/32
    ### Cloudflare ip ranges
    - ipBlock:
        cidr: 103.21.244.0/22
    - ipBlock:
        cidr: 103.22.200.0/22
    - ipBlock:
        cidr: 103.31.4.0/22
    - ipBlock:
        cidr: 104.16.0.0/12
    - ipBlock:
        cidr: 108.162.192.0/18
    - ipBlock:
        cidr: 131.0.72.0/22
    - ipBlock:
        cidr: 141.101.64.0/18
    - ipBlock:
        cidr: 162.158.0.0/15
    - ipBlock:
        cidr: 172.64.0.0/13
    - ipBlock:
        cidr: 173.245.48.0/20
    - ipBlock:
        cidr: 188.114.96.0/20
    - ipBlock:
        cidr: 190.93.240.0/20
    - ipBlock:
        cidr: 197.234.240.0/22
    - ipBlock:
        cidr: 198.41.128.0/17
